2013-01-22: Get rid of the colons in the time stamps used for file names (they
            give rise to escaping headaches).

2012-12-20: Release v0.4.1.

2012-12-20: Fix cutoff logic when end cutoff value is 0.

2012-12-20: If there are missing data values when doing a CDF plot, the plot
            should cut off at a probability < 1; i.e. use the total size of the
            data (including null data points) as data set size when calculating
            probability.

2012-12-17: Release v0.4.0.

2012-12-15: Add stats formatter (-f stats) to output statistics on results data sets.

2012-12-13: Fix bug that caused smoothing to add new data points at the ends of
            series.

2012-12-13: Fix bug that caused primary axis to place ticks on the right hand
            side in dual-axis plots.

2012-12-13: Release v0.3.0.

2012-12-13: Lookup hostnames before starting runners and determine default IP
            version from them. Thanks to David Woodhouse for the suggestion.

2012-12-13: Add workaround for bug in old matplotlib versions that broke
            exporting of plots.

2012-12-10: Add options to turn off annotation, legend and title on plots
            (--no-annotation, --no-legend and --no-title resp.).

2012-12-10: Add automatic switching to log scale for regular plots as well as
            cdf plots. For regular plots, data differing by more than a factor
            of 20 triggers log scaling.

2012-12-10: Add rtt_fair test.

2012-12-10: Fix spurious error when running netperf-wrapper with a test name
            that is also an existing file name (that is, make the error message
            intelligible).

2012-12-09: Automatically switch CDF plots to log scale if the median values
            differ by more than an order of magnitude.

2012-12-09: Support multiple -i options to combine several result sets into one
            table/set of plots. Basically, reading in multiple data sets by